ZH/Devops/1.8/SUMMARY.md
# Summary

## 持续集成平台
* [产品简介]()
    * [简介](产品白皮书/intro/README.md)
    * [首页](产品白皮书/intro/Hpage.md)
* [核心优势](产品白皮书/intro/others/Advantages.md)
* [产品架构](产品白皮书/intro/others/Architecture.md)
* [术语解释]()
    * [5 分钟读懂 bk-ci 流水线](产品白皮书/intro/terminology/Learn-pipeline-in-5min.md)
    * [Task](产品白皮书/intro/terminology/Task.md)
    * [Job](产品白皮书/intro/terminology/Job.md)
    * [Stage](产品白皮书/intro/terminology/Stage.md)
    * [Variables](产品白皮书/intro/terminology/Variables.md)
    * [Triggers](产品白皮书/intro/terminology/Triggers.md)
    * [构建资源]()
        * [bk-ci 云托管](产品白皮书/intro/terminology/Resources_hosted.md)
        * [私有构建资源](产品白皮书/intro/terminology/Resources_self.md)
* [快速入门]()
    * [创建你的第一条流水线](产品白皮书/Quickstarts/Create-your-first-pipeline.md)
    * [关联你的第一个代码库](产品白皮书/Quickstarts/Link-your-first-repo.md)
    * [为你的 Git 工程开启 CI](产品白皮书/Quickstarts/Enable-ci.md)
* [场景案例]()
    * [示例]()
        * [代码拉取+制品上传+制品下载](产品白皮书/Quickstarts/Case/Examples/pull-upload-download.md)
        * [流水线触发方式使用](产品白皮书/Quickstarts/Case/Examples/different-triggers.md)
        * [流水线变量使用](产品白皮书/Quickstarts/Case/Examples/vars-usage.md)
        * [使用模板创建流水线](产品白皮书/Quickstarts/Case/Examples/create-pipeline-by-template.md)
        * [流水线条件判断](产品白皮书/Quickstarts/Case/Examples/condition-stage.md)
        * [子流水线](产品白皮书/Quickstarts/Case/Examples/children-pipeline.md)
        * [Java Maven Demo](产品白皮书/Quickstarts/Case/Examples/Java-Maven.md)
        * [Node Demo](产品白皮书/Quickstarts/Case/Examples/Node.md)
    * [场景实践]()
        * [美术人员自助更新游戏资源](产品白皮书/Quickstarts/Case/Scene/Arts-upload-resources.md)
        * [运营人员发布游戏内运营活动](产品白皮书/Quickstarts/Case/Scene/operators-upload-resources.md)
        * [客户端多版本构建保持一致](产品白皮书/Quickstarts/Case/Scene/client-multi-Consistent.md)
        * [c/c++后台代码的编译加速](产品白皮书/Quickstarts/Case/Scene/code-compilation-acceleration.md)
        * [客户端自动化性能测试](产品白皮书/Quickstarts/Case/Scene/Client-performance-testing.md)
        * [Pipeline失败的问题定位](产品白皮书/Quickstarts/Case/Scene/pipeline-failure-location.md)
        * [移动端内测版本发布管理](产品白皮书/Quickstarts/Case/Scene/version-release-management.md)
        * [在转测/发布时使用质量红线](产品白皮书/Quickstarts/Case/Scene/release-quality-redline.md)
        * [MergeRequest时使用质量红线](产品白皮书/Quickstarts/Case/Scene/mr-quality-redline.md)
        * [企业微信机器人执行流水线](产品白皮书/Quickstarts/Case/Scene/wechat-robot-exe.md)
        * [流水线的模版和复制](产品白皮书/Quickstarts/Case/Scene/Template-copy-pipeline.md)
        * [管理大量流水线](产品白皮书/Quickstarts/Case/Scene/Manage-large-pipelines.md)
        * [UE引擎编译加速](产品白皮书/Quickstarts/Case/Scene/UE4-compilation-acceleration.md)
        * [实现发布与回滚](产品白皮书/Quickstarts/Case/Scene/Implement-publishing-rollback.md)
        * [集成P4代码库](产品白皮书/Quickstarts/Case/Scene/p4-code-base.md)
        * [云环境异常定位](产品白皮书/Quickstarts/Case/Scene/Cloud-anomaly-location.md)
        * [流水线互斥及排队](产品白皮书/Quickstarts/Case/Scene/Pipeline-exclusion-queue.md)
        * [组建私有构建集群](产品白皮书/Quickstarts/Case/Scene/Build-private-clusters.md)
        * [不同流水线间调用](产品白皮书/Quickstarts/Case/Scene/call-pipeline-diff.md)
        * [通知发送到钉钉](产品白皮书/Quickstarts/Case/Scene/notification-sent-nail.md)
    * [客户案例]()
        * [呦尔哈--通过蓝盾提升CI/CD效率](产品白皮书/Quickstarts/Case/Case-study/yorha.md)
        * [永航--通过蓝鲸蓝盾实现跨环境CICD互通](产品白皮书/Quickstarts/Case/Case-study/yonghang.md)
        * [宝可拉--通过按量计费的编译加速方案提升服务器端75%编译速度](产品白皮书/Quickstarts/Case/Case-study/bokura.md)
* [产品功能]()
    * [控制台](产品白皮书/Services/Console/Console.md)
    * [流水线]()
        * [流水线列表查看](产品白皮书/Services/Pipeline/pipeline-list.md)
        * [流水线构建任务执行历史](产品白皮书/Services/Pipeline/pipeline-history.md)            
        * [流水线任务查看](产品白皮书/Services/Pipeline/pipeline-detail.md)
        * [流水线的触发方式]()
            * [gitlab 触发](产品白皮书/Services/Pipeline/pipeline-triggers/pipeline-trigger-gitlab.md)
            * [手动触发](产品白皮书/Services/Pipeline/pipeline-triggers/pipeline-trigger-manual.md)
            * [定时触发](产品白皮书/Services/Pipeline/pipeline-triggers/pipeline-trigger-timer.md)
            * [远程触发](产品白皮书/Services/Pipeline/pipeline-triggers/pipeline-trigger-remote.md)
        * [编排流水线]()
            * [创建/编辑流水线](产品白皮书/Services/Pipeline/pipeline-edit-guide/pipeline-edit.md)
            * [Stage 准入](产品白皮书/Services/Pipeline/pipeline-edit-guide/gui.md)
            * [为流水线开启自定义构建号](产品白皮书/Services/Pipeline/pipeline-edit-guide/alias-buildno.md)
            * [锁定流水线](产品白皮书/Services/Pipeline/pipeline-edit-guide/disable-pipeline.md)
            * [启用 Matrix Job(构建矩阵)](产品白皮书/Services/Pipeline/pipeline-edit-guide/pipeline-matrix-job.md)
            * [流水线图形化编排](产品白皮书/Services/Pipeline/pipeline-edit-guide/gui.md)
            * [锁定流水线](产品白皮书/Services/Pipeline/pipeline-edit-guide/disable-pipeline.md)
        * [流水线任务详情页]()
            * [详情](产品白皮书/Services/Pipeline/pipeline-build-detail/pipeline-detail.md)
            * [流水线状态信息汇总](产品白皮书/Services/Pipeline/pipeline-build-detail/status.md)
        * [流水线变量]()
            * [变量](产品白皮书/Services/Pipeline/pipeline-variables/variables.md)
            * [变量的基本使用](产品白皮书/Services/Pipeline/pipeline-variables/pipeline-variables-shell-batch.md)
            * [使用变量控制流水线流程](产品白皮书/Services/Pipeline/pipeline-variables/pipeline-variables-flow-control.md)
            * [使用备注变量](产品白皮书/Services/Pipeline/pipeline-variables/pipeline-variables-remark.md)
            * [凭证变量](产品白皮书/Services/Pipeline/pipeline-variables/pipeline-variables-ticket.md)
        * [流水线视图]()
            * [视图](产品白皮书/Services/Pipeline/pipeline-view/use.md)
        * [构建资源]()
            * [什么是构建资源](产品白皮书/Services/Pipeline/Pools/build-source.md)                
            * [构建机托管]()
                * [将你的构建机托管至 BKCI](产品白皮书/Services/Pipeline/Pools/self-hosted-agents/deposit.md)
                * [第三方构建机环境准备](产品白皮书/Services/Pipeline/Pools/self-hosted-agents/prepara-agent.md)
                * [导入Windows构建机](产品白皮书/Services/Pipeline/Pools/self-hosted-agents/windows/win-import.md)
                * [windows agent启动界面程序的解决办法](产品白皮书/Services/Pipeline/Pools/self-hosted-agents/windows/run-ui.md)
                * [构建机详情查看](产品白皮书/Services/Pipeline/Pools/env-manage/host-detail.md)
            * [构建机详情页](产品白皮书/Services/Pipeline/Pools/agent-detail.md)
    * [制品库]()
        * [制品的归档与拉取](产品白皮书/Services/Artifactory/Artifactory.md)
        * [归档制品](产品白皮书/Services/Artifactory/archive.md)
        * [下载制品](产品白皮书/Services/Artifactory/download.md)
        * [元数据规范](产品白皮书/Services/Artifactory/meta.md)
    * [代码库]()
        * [代码库管理](产品白皮书/Services/Coderepo/repos-link.md)
    * [代码检查]()
        * [CodeCC简介](产品白皮书/Services/Codecc/codecc-intro.md)
        * [代码检查配置](产品白皮书/Services/Codecc/codecc-config.md)
        * [代码检查结果](产品白皮书/Services/Codecc/codecc-result.md)
        * [代码检查规则集](产品白皮书/Services/Codecc/codecc-ruleset.md)
        * [代码检查使用](产品白皮书/Services/Codecc/codecc-usage.md)
        * [CodeCC部署所需资源](产品白皮书/Services/Codecc/codecc-cost.md)
    * [凭证管理]()
        * [凭证](产品白皮书/Services/Ticket/ticket.md)
        * [创建凭据](产品白皮书/Services/Ticket/ticket-add.md)
        * [查看凭据](产品白皮书/Services/Ticket/ticket-list.md)
    * [研发商店]()
        * [浏览研发商店](产品白皮书/Services/Store/home.md)
        * [流水线插件]()
            * [开发一个流水线插件](产品白皮书/Services/Store/start-new-task.md)
            * [发布流水线插件到商店](产品白皮书/Services/Store/upload-new-task.md)  
            * [插件开发指引]()
                * [Java 插件开发指引](产品白皮书/Services/Store/plugins/plugin-dev-guide/java.md)
                * [Python 插件开发指引](产品白皮书/Services/Store/plugins/plugin-dev-guide/python.md)
                * [Golang 插件开发指引](产品白皮书/Services/Store/plugins/plugin-dev-guide/golang.md)
                * [NodeJS 插件开发指引](产品白皮书/Services/Store/plugins/plugin-dev-guide/nodejs.md)
                * [流水线插件开发案例]()
                    * [sendmsg-通用消息发送插件](产品白皮书/Services/Store/plugins/plugin-dev-guide/case-stduy/sendmsg.md)
            * [插件规范]()
                * [插件开发规范](产品白皮书/Services/Store/plugins/plugin-dev-standard/plugin-specification.md)
                * [插件配置规范](产品白皮书/Services/Store/plugins/plugin-dev-standard/plugin-config.md)
                * [插件输出规范](产品白皮书/Services/Store/plugins/plugin-dev-standard/plugin-output.md)
                * [插件错误码规范](产品白皮书/Services/Store/plugins/plugin-dev-standard/plugin-error-code.md)
                * [插件发布包规范](产品白皮书/Services/Store/plugins/plugin-dev-standard/release.md)
            * [插件运行环境]()
                * [NodeJS 插件执行环境](产品白皮书/Services/Store/plugins/plugin-dev-env/prepare-node.md)
                * [Python 插件执行环境](产品白皮书/Services/Store/plugins/plugin-dev-env/prepare-python.md)
            * [自定义插件 UI 指引](产品白皮书/Services/Store/plugins/plugin-custom-ui.md)
            * [常用插件安装及简介](产品白皮书/Services/Store/plugins/plugin_install_demo.md)
            * [python sdk接口指引](产品白皮书/Services/Store/plugins/python-atom-sdk-examples.md)
            * [插件UI组件使用示例](产品白皮书/Services/Store/plugins/UI-components-examples.md)
            * [在BKCI里使用商店插件](产品白皮书/Services/Store/plugins/upload-plugin.md)
        * [流水线模板]()
            * [开发一个流水线模板](产品白皮书/Services/Store/ci-templates/start-new-template.md)
            * [发布流水线模板到商店](产品白皮书/Services/Store/ci-templates/release-new-template.md)
        * [CI 镜像]()
            * [构建并托管一个 CI 镜像](产品白皮书/Services/Store/ci-images/docker-build.md)
            * [发布 CI 镜像到商店](产品白皮书/Services/Store/ci-images/release-new-image.md)
    * [编译加速]()
        * [Linux C/C++ 编译加速](产品白皮书/Services/Turbo/ItGuide/linux-tubo-speed/use_in_linux.md)
        * [定制Linux C/C++加速方案](产品白皮书/Services/Turbo/ItGuide/linux-tubo-speed/README.md)
        * [在流水线中进行编译加速](产品白皮书/Services/Turbo/ItGuide/linux-tubo-speed/use_in_pipline.md)
        * [在私有构建机上使用加速](产品白皮书/Services/Turbo/ItGuide/linux-tubo-speed/use_in_pool.md)
        * [Linux C/C++ 脚本配置详解](产品白皮书/Services/Turbo/ItGuide/linux-tubo-speed/script_conf.md)
        * [CMake 和 CLion 配置蓝盾编译加速](产品白皮书/Services/Turbo/ItGuide/linux-tubo-speed/cmake_clion_conf.md)
    * [移动端版本体验]()
        * [移动端版本体验简介](产品白皮书/Services/Client-experience/intro.md)
        * [部署移动端版本体验需要的硬件资源](产品白皮书/Services/Client-experience/client-experience-cost.md)
        * [移动端版本体验使用指南](产品白皮书/Services/Client-experience/client-experience-usage.md)
    * [bkchat机器人]()
        * [简介](产品白皮书/Services/Bkchat/intro.md)
        * [bkchat使用说明](产品白皮书/Services/Bkchat/bkchatbot-usage.md)       
* [部署指南]()
    * [BKCI 硬件规格指南](产品白皮书/Setup/system-requirements/hardware.md)
    * [BKCI 系统要求](产品白皮书/Setup/system-requirements/system.md)
    * [蓝盾备份方案](产品白皮书/Setup/backup.md)
* [开发者资料库]()
    * [REST API]()
        * [使用前必读](产品白皮书/Developer/rest-api/read-before-use.md)
        * [API使用示例](产品白皮书/Developer/rest-api/api-use-demo.md)
        * [OPENAPI-项目模板资源]()
            * [批量更新流水线模板实例](产品白皮书/Developer/rest-api/project-template-resources/batch-update-pipeline-template-example.md)
            * [更新流水线模板](产品白皮书/Developer/rest-api/project-template-resources/update-the-pipeline-template.md)
            * [批量实例化流水线模板](产品白皮书/Developer/rest-api/project-template-resources/batch-instantiation-pipeline-template.md)
            * [创建流水线模板](产品白皮书/Developer/rest-api/project-template-resources/create-a-pipeline-template.md)
            * [获取所有种类流水线模板列表](产品白皮书/Developer/rest-api/project-template-resources/get-a-list-of-all-kinds-of-pipeline-templates.md)
            * [获取流水线模板的实例列表](产品白皮书/Developer/rest-api/project-template-resources/get-the-list-of-instances-of-the-pipeline-template.md)
            * [获取流水线模板详情](产品白皮书/Developer/rest-api/project-template-resources/get-the-details-of-the-pipeline-template.md)
            * [模版管理-获取模版列表](产品白皮书/Developer/rest-api/project-template-resources/get-a-list-of-templates.md)
            * [删除流水线模板的版本](产品白皮书/Developer/rest-api/project-template-resources/delete-the-version-of-the-pipeline-template.md)
            * [删除流水线模板](产品白皮书/Developer/rest-api/project-template-resources/delete-the-pipeline-template.md)
        * [OPENAPI-构建资源]()
            * [获取签名接口token](产品白皮书/Developer/rest-api/build-resources/get-the-signature-interface-token.md)
            * [查看签名任务状态信息](产品白皮书/Developer/rest-api/build-resources/view-signature-task-status-information.md)
            * [获取签后IPA文件下载路径](产品白皮书/Developer/rest-api/build-resources/get-the-download-path-of-the-signed-ipa-file.md)
            * [签名任务详情](产品白皮书/Developer/rest-api/build-resources/signature-task-details.md)
        * [OPENAPI-代码提交资源]()
            * [获取代码提交记录](产品白皮书/Developer/rest-api/code-submission-resources/get-the-code-submission-record.md)
        * [OPENAPI-代码仓库资源]()
            * [编辑关联代码库](产品白皮书/Developer/rest-api/code-warehouse-resources/edit-the-associated-code-base.md)
            * [关联代码库](产品白皮书/Developer/rest-api/code-warehouse-resources/associated-code-base.md)
            * [代码库列表](产品白皮书/Developer/rest-api/code-warehouse-resources/code-library-list.md)
            * [删除代码库](产品白皮书/Developer/rest-api/code-warehouse-resources/delete-code-base.md)
        * [OPENAPI-项目资源]()
            * [修改项目](产品白皮书/Developer/rest-api/project-resources/modify-the-project.md)
            * [添加指定用户到指定项目用户组](产品白皮书/Developer/rest-api/project-resources/add-the-specified-user-to-the-specified-project-user-group.md)
            * [创建项目](产品白皮书/Developer/rest-api/project-resources/create-project.md)
            * [校验项目名称和项目英文名](产品白皮书/Developer/rest-api/project-resources/verify-the-project-name-and-the-english-name-of-the-project.md)
            * [获取项目信息](产品白皮书/Developer/rest-api/project-resources/get-project-information.md)
            * [查询所有项目](产品白皮书/Developer/rest-api/project-resources/query-all-items.md)
        * [OPENAPI-流水线资源]()
            * [更新流水线设置](产品白皮书/Developer/rest-api/pipeline-resources/update-pipeline-settings.md)
            * [还原流水线编排](产品白皮书/Developer/rest-api/pipeline-resources/reduction-pipeline-orchestration.md)
            * [更新流水线编排和设置](产品白皮书/Developer/rest-api/pipeline-resources/update-pipeline-layout-and-settings.md)
            * [编辑流水线编排](产品白皮书/Developer/rest-api/pipeline-resources/edit-pipeline-layout.md)
            * [导入新流水线, 包含流水线编排和设置](产品白皮书/Developer/rest-api/pipeline-resources/import-new-pipeline.md)
            * [批量获取流水线编排与配置](产品白皮书/Developer/rest-api/pipeline-resources/batch-get-pipeline-layout-and-configuration.md)
            * [流水线重命名](产品白皮书/Developer/rest-api/pipeline-resources/pipeline-renaming.md)
            * [复制流水线编排](产品白皮书/Developer/rest-api/pipeline-resources/copy-pipeline-orchestration.md)
            * [新建流水线编排](产品白皮书/Developer/rest-api/pipeline-resources/new-pipeline-orchestration.md)
            * [获取流水线状态](产品白皮书/Developer/rest-api/pipeline-resources/get-the-status-of-the-pipeline.md)
            * [获取流水线编排](产品白皮书/Developer/rest-api/pipeline-resources/get-the-pipeline-orchestration.md)
            * [获取项目的流水线列表](产品白皮书/Developer/rest-api/pipeline-resources/get-the-pipeline-list-of-the-project.md)
            * [删除流水线编排](产品白皮书/Developer/rest-api/pipeline-resources/delete-the-pipeline-orchestration.md)
        * [OPENAPI-流水线分组]()
            * [更改标签](产品白皮书/Developer/rest-api/pipeline-grouping/change-label.md)
            * [更改分组](产品白皮书/Developer/rest-api/pipeline-grouping/change-group.md)
            * [添加标签](产品白皮书/Developer/rest-api/pipeline-grouping/add-tag.md)
            * [添加分组](产品白皮书/Developer/rest-api/pipeline-grouping/add-group.md)
            * [获取所有分组信息](产品白皮书/Developer/rest-api/pipeline-grouping/get-all-group-information.md)
            * [删除标签](产品白皮书/Developer/rest-api/pipeline-grouping/remove-label.md)
            * [删除分组](产品白皮书/Developer/rest-api/pipeline-grouping/delete-group.md)
        * [OPENAPI-迁移]()
            * [关联iam项目](产品白皮书/Developer/rest-api/migrate/associated-iam-project.md)
            * [获取项目下pipelineId+自增id](产品白皮书/Developer/rest-api/migrate/get-the-pipelineid-and-auto-increment-id-under-the-project.md)
        * [OPENAPI-研发市场资源]()
            * [安装研发商店模板到项目](产品白皮书/Developer/rest-api/r-and-d-market-resources/install-the-r-and-d-store-template-into-the-project.md)
        * [OPENAPI-构建日志资源]()
            * [获取更多日志](产品白皮书/Developer/rest-api/build-log-resources/get-more-logs.md)
            * [根据构建ID获取初始化所有日志](产品白皮书/Developer/rest-api/build-log-resources/obtain-and-initialize-all-logs-according-to-the-build-id.md)
            * [下载日志接口](产品白皮书/Developer/rest-api/build-log-resources/download-log-interface.md)
            * [获取某行后的日志](产品白皮书/Developer/rest-api/build-log-resources/get-the-log-after-a-certain-line.md)
        * [OPENAPI-证书资源]()
            * [编辑凭据](产品白皮书/Developer/rest-api/certificate-resources/edit-credentials.md)
            * [新增凭据](产品白皮书/Developer/rest-api/certificate-resources/add-credentials.md)
            * [获取凭据](产品白皮书/Developer/rest-api/certificate-resources/get-credentials.md)
            * [获取用户拥有对应权限凭据列表](产品白皮书/Developer/rest-api/certificate-resources/obtain-the-list-of-credentials-that-the-user-has-corresponding-permissions.md)
            * [删除凭据](产品白皮书/Developer/rest-api/certificate-resources/delete-credentials.md)
        * [OPENAPI-callback资源]()
            * [callback回调重试](产品白皮书/Developer/rest-api/callback-resource/callback-callback-to-retry.md)
            * [批量创建callback回调](产品白皮书/Developer/rest-api/callback-resource/create-callbacks-in-batches.md)
            * [创建callback回调](产品白皮书/Developer/rest-api/callback-resource/create-callback-callback.md)
            * [callback回调执行历史记录](产品白皮书/Developer/rest-api/callback-resource/callback-execution-history.md)
            * [callback回调列表](产品白皮书/Developer/rest-api/callback-resource/callback-list.md)
            * [callback回调移除](产品白皮书/Developer/rest-api/callback-resource/callback-callback-removed.md)
        * [OPENAPI-构建资源]()
            * [启动构建](产品白皮书/Developer/rest-api/build-resources-1/start-the-build.md)
            * [获取构建中的变量值](产品白皮书/Developer/rest-api/build-resources-1/get-the-value-of-the-variable-in-the-build.md)
            * [停止构建](产品白皮书/Developer/rest-api/build-resources-1/stop-building.md)
            * [手动审核启动阶段](产品白皮书/Developer/rest-api/build-resources-1/manual-review-of-the-start-up-phase.md)
            * [重试构建-重试或者跳过失败插件](产品白皮书/Developer/rest-api/build-resources-1/retry-the-build.md)
            * [操作暂停插件](产品白皮书/Developer/rest-api/build-resources-1/operation-pause-plugin.md)
            * [获取流水线手动启动参数](产品白皮书/Developer/rest-api/build-resources-1/obtain-the-manual-start-parameters-of-the-pipeline.md)
            * [获取流水线构建历史](产品白皮书/Developer/rest-api/build-resources-1/get-pipeline-construction-history.md)
            * [查看构建状态信息](产品白皮书/Developer/rest-api/build-resources-1/view-build-status-information.md)
            * [构建详情](产品白皮书/Developer/rest-api/build-resources-1/build-details.md)
        * [OPENAPI-插件资源]()
            * [安装插件到项目](产品白皮书/Developer/rest-api/plugin-resources/install-the-plugin-to-the-project.md)
            * [根据插件代码获取插件统计信息](产品白皮书/Developer/rest-api/plugin-resources/get-plug-in-statistics-according-to-the-plug-in-code.md)
            * [根据插件代码获取使用的流水线详情](产品白皮书/Developer/rest-api/plugin-resources/get-the-details-of-the-pipeline-used-according-to-the-plug-in-code.md)
            * [根据插件代码获取插件详细信息](产品白皮书/Developer/rest-api/plugin-resources/get-plug-in-details-according-to-the-plug-in-code.md)
        * [OPENAPI-构建产物资源]()
            * [获取用户下载链接](产品白皮书/Developer/rest-api/build-product-resources/get-user-download-link.md)
            * [根据元数据获取文件](产品白皮书/Developer/rest-api/build-product-resources/get-files-based-on-metadata.md)
        * [OPENAPI-构建产物托管任务资源]()
            * [清理文件托管任务](产品白皮书/Developer/rest-api/build-product-hosting-task-resources/clean-up-file-hosting-tasks.md)
            * [创建文件托管任务](产品白皮书/Developer/rest-api/build-product-hosting-task-resources/create-file-hosting-task.md)
            * [查询文件托管任务状态](产品白皮书/Developer/rest-api/build-product-hosting-task-resources/query-file-hosting-task-status.md)
        * [OPENAPI-环境管理-构建机管理]()
            * [根据hashId获取项目节点列表(不校验权限)](产品白皮书/Developer/rest-api/build-machine-management/get-the-list-of-project-nodes-according-to-hashid.md)
            * [根据环境的hashId获取指定项目指定环境下节点列表(不校验权限)](产品白皮书/Developer/rest-api/build-machine-management/get-the-list-of-nodes-in-the-specified-environment-of-the-specified-project-according-to-the-hashid.md)
            * [根据环境名称获取环境信息(不校验权限)](产品白皮书/Developer/rest-api/build-machine-management/obtain-environmental-information-based-on-the-environmental-name.md)
            * [根据hashId(多个)获取环境信息(不校验权限)](产品白皮书/Developer/rest-api/build-machine-management/obtain-environmental-information-based-on-hashid-multiple.md)
            * [获取指定构建机状态](产品白皮书/Developer/rest-api/build-machine-management/get-the-status-of-the-specified-build-machine.md)
            * [获取项目下第三方构建机列表](产品白皮书/Developer/rest-api/build-machine-management/get-the-list-of-third-party-build-machines-under-the-project.md)
            * [获取用户有权限使用的服务器列表](产品白皮书/Developer/rest-api/build-machine-management/get-the-list-of-servers-that-the-user-has-permission-to-use.md)
            * [获取构建节点信息（扩展接口）](产品白皮书/Developer/rest-api/build-machine-management/get-build-node-information.md)
            * [获取构建节点信息（扩展接口）](产品白皮书/Developer/rest-api/build-machine-management/get-build-node-information-extension-ports.md)
            * [获取用户有权限使用的环境列表](产品白皮书/Developer/rest-api/build-machine-management/get-the-list-of-environments-that-the-user-has-permission-to-use.md)
        * [QUALITY-质量红线相关]()
            * [更新拦截规则列表](产品白皮书/Developer/rest-api/quality-red-line-related/update-the-list-of-blocking-rules.md)
            * [创建拦截规则](产品白皮书/Developer/rest-api/quality-red-line-related/create-blocking-rules.md)
            * [获取拦截规则列表](产品白皮书/Developer/rest-api/quality-red-line-related/get-the-list-of-blocking-rules.md)
            * [获取拦截记录](产品白皮书/Developer/rest-api/quality-red-line-related/obtain-interception-records.md)
            * [删除拦截规则列表](产品白皮书/Developer/rest-api/quality-red-line-related/delete-the-list-of-blocking-rules.md)
        * [WEBHOOK-代码事件触发]()
            * [获取流水线的webhook构建日志列表](产品白皮书/Developer/rest-api/code-event-trigger/get-the-pipelines-webhook-build-log-list.md)
            * [获取流水线的webhook列表](产品白皮书/Developer/rest-api/code-event-trigger/get-the-webhook-list-of-the-pipeline.md)
    * [数据库设计文档]()
        * [devops_ci_auth](产品白皮书/Developer/DB-doc/devops_ci_auth.md)
        * [devops_ci_sign](产品白皮书/Developer/DB-doc/devops_ci_sign.md)
        * [devops_ci_artifactory](产品白皮书/Developer/DB-doc/devops_ci_artifactory.md)
        * [devops_ci_repository](产品白皮书/Developer/DB-doc/devops_ci_repository.md)
        * [devops_ci_plugin](产品白皮书/Developer/DB-doc/devops_ci_plugin.md)
        * [devops_ci_project](产品白皮书/Developer/DB-doc/devops_ci_project.md)
        * [devops_ci_quality](产品白皮书/Developer/DB-doc/devops_ci_quality.md)
        * [devops_ci_store](产品白皮书/Developer/DB-doc/devops_ci_store.md)
        * [devops_ci_log](产品白皮书/Developer/DB-doc/devops_ci_log.md)
        * [devops_ci_dispatch](产品白皮书/Developer/DB-doc/devops_ci_dispatch.md)
        * [devops_ci_image](产品白皮书/Developer/DB-doc/devops_ci_image.md)
        * [devops_ci_environment](产品白皮书/Developer/DB-doc/devops_ci_environment.md)
        * [devops_ci_op](产品白皮书/Developer/DB-doc/devops_ci_op.md)
        * [devops_ci_notify](产品白皮书/Developer/DB-doc/devops_ci_notify.md)
        * [devops_ci_openapi](产品白皮书/Developer/DB-doc/devops_ci_openapi.md)
        * [devops_ci_ticket](产品白皮书/Developer/DB-doc/devops_ci_ticket.md)
        * [devops_ci_process](产品白皮书/Developer/DB-doc/devops_ci_process.md)
        * [devops_ci_measure](产品白皮书/Developer/DB-doc/devops_ci_measure.md)
    * [变量列表]()
        * [预定义变量合集](产品白皮书/Developer/pre-define-var/README.md)
        * [GITHUB常量合集](产品白皮书/Developer/pre-define-var/github.md)
        * [GIT常量合集](产品白皮书/Developer/pre-define-var/git.md)
* [常见问题]()
    * [常见问题集锦](产品白皮书/Reference/faqs/README.md)
    * [基本概念](产品白皮书/Reference/faqs/user-guide.md)
    * [自检思路](产品白皮书/Reference/faqs/check-myself.md)
    * [流水线]()
        * [流水线执行时相关问题](产品白皮书/Reference/faqs/pipelines/execute.md)
        * [使用常见问题]()
            * [流水线编排](产品白皮书/Reference/faqs/pipelines/use/set_up.md)
            * [触发器](产品白皮书/Reference/faqs/pipelines/use/trigger.md)
            * [构建机](产品白皮书/Reference/faqs/pipelines/use/node.md)
            * [插件](产品白皮书/Reference/faqs/pipelines/use/plugin.md)
        * [报错常见问题]()
            * [触发器](产品白皮书/Reference/faqs/pipelines/error/trigger.md)
            * [构建机](产品白皮书/Reference/faqs/pipelines/error/node.md)
            * [插件报错](产品白皮书/Reference/faqs/pipelines/error/plugin.md)
    * [代码库](产品白皮书/Reference/faqs/code_repo.md)
    * [页面报错](产品白皮书/Reference/faqs/web_error.md)
    * [服务异常](产品白皮书/Reference/faqs/services_error.md)
    * [机器重启](产品白皮书/Reference/faqs/restart.md)
    * [环境管理]()
        * [使用常见问题](产品白皮书/Reference/faqs/environment/use.md)
        * [报错常见问题](产品白皮书/Reference/faqs/environment/error.md)
    * [代码检查](产品白皮书/Reference/faqs/codecc-faqs.md)
    * [制品库](产品白皮书/Reference/faqs/repo-faqs.md)
    * [编译加速](产品白皮书/Reference/faqs/turbo-faqs.md)
    * [已知问题](产品白皮书/Reference/faqs/known-issues.md)
    * [现有问题汇总](产品白皮书/Reference/pipeline-faqs-all.md)
    * [系统限制]()
        * [流水线复杂度限制](产品白皮书/Reference/limit/pipeline-limit.md)
    * [蓝鲸相关材料]()  
        * [蓝鲸使用学习材料](产品白皮书/Reference/bk-info/bk-tutorial.md)
        * [蓝鲸入门使用文档](产品白皮书/Reference/bk-info/bk-user-guide.md)
