ZH/Devops/3.0/SUMMARY.md
# Summary

## 持续集成平台
* [产品公告](https://bk.tencent.com/s-mart/community/question/6458?type=article)
* [产品简介]()
    * [首页](UserGuide/intro/README.md)
    * [简介](UserGuide/intro/bkci.md)
    * [BKCI 组件](UserGuide/intro/terminology/components.md)
* [特点及优势](UserGuide/intro/others/Advantages.md)
* [产品架构](UserGuide/intro/others/Architecture.md)
* [术语解释]()
    * [5 分钟读懂 BKCI 流水线](UserGuide/intro/terminology/Learn-pipeline-in-5min.md)
    * [Task](UserGuide/intro/terminology/Task.md)
    * [Job](UserGuide/intro/terminology/Job.md)
    * [Stage](UserGuide/intro/terminology/Stage.md)
    * [Variables]()
        * [预定义常量/变量](UserGuide/intro/terminology/pre-define-var/README.md)
        * [GITHUB 常量合集](UserGuide/intro/terminology/pre-define-var/github.md)
        * [GIT 常量合集](UserGuide/intro/terminology/pre-define-var/git.md)
        * [自定义流水线变量](UserGuide/Services/Pipeline/pipeline-edit-guide/pipeline-variables/variables-custom.md)
    * [Triggers](UserGuide/intro/terminology/Triggers.md)
    * [构建资源]()
        * [BKCI 云托管](UserGuide/intro/terminology/Resources_hosted.md)
        * [私有构建资源](UserGuide/intro/terminology/Resources_self.md)
* [快速入门]()
    * [创建你的第一条流水线](UserGuide/Quickstarts/Create-your-first-pipeline.md)
    * [关联你的第一个代码库](UserGuide/Quickstarts/Link-your-first-repo.md)
    * [为你的 Git 工程开启 CI](UserGuide/Quickstarts/Enable-ci.md)
* [产品功能]()
    * [控制台](UserGuide/Services/Console/Console.md)
    * [流水线]()
        * [流水线列表查看](UserGuide/Services/Pipeline/pipeline-list.md)
        * [流水线构建任务执行历史](UserGuide/Services/Pipeline/pipeline-history.md)            
        * [流水线任务查看](UserGuide/Services/Pipeline/pipeline-build-detail/pipeline-detail.md)
        * [流水线的触发方式]()
            * [gitlab 触发](UserGuide/Services/Pipeline/pipeline-triggers/pipeline-trigger-gitlab.md)
            * [手动触发](UserGuide/Services/Pipeline/pipeline-triggers/pipeline-trigger-manual.md)
            * [定时触发](UserGuide/Services/Pipeline/pipeline-triggers/pipeline-trigger-timer.md)
            * [远程触发](UserGuide/Services/Pipeline/pipeline-triggers/pipeline-trigger-remote.md)
        * [编排流水线]()
            * [创建/编辑流水线](UserGuide/Services/Pipeline/pipeline-edit-guide/pipeline-edit.md)
            * [流水线变量]()
                * [变量](UserGuide/Services/Pipeline/pipeline-edit-guide/pipeline-variables/variables.md)
                * [变量的基本使用](UserGuide/Services/Pipeline/pipeline-edit-guide/pipeline-variables/pipeline-variables-shell-batch.md)
                * [在流水线中引用变量](UserGuide/Services/Pipeline/pipeline-edit-guide/pipeline-variables/variables-custom-use.md)
                * [使用变量控制流水线流程](UserGuide/Services/Pipeline/pipeline-edit-guide/pipeline-variables/pipeline-variables-flow-control.md)
                * [流水线命令字](UserGuide/Services/Pipeline/pipeline-edit-guide/pipeline-variables/pipeline-command.md)
                * [使用备注变量](UserGuide/Services/Pipeline/pipeline-edit-guide/pipeline-variables/pipeline-variables-remark.md)
                * [凭证变量](UserGuide/Services/Pipeline/pipeline-edit-guide/pipeline-variables/pipeline-variables-ticket.md)
            * [Stage 准入](UserGuide/Services/Pipeline/pipeline-edit-guide/gui.md)
            * [为流水线开启自定义构建号](UserGuide/Services/Pipeline/pipeline-edit-guide/alias-buildno.md)
            * [启用 Matrix Job(构建矩阵)](UserGuide/Services/Pipeline/pipeline-edit-guide/pipeline-matrix-job.md)
            * [多个 Job 使用集群中的同一台机器进行构建](UserGuide/Services/Pipeline/pipeline-edit-guide/multiple-jobs-one-machine.md)
            * [并发控制]()
                * [控制流水线并发](UserGuide/Services/Pipeline/pipeline-edit-guide/concurrency-control/pipeline-concurrency.md)
                * [Job 并发控制](UserGuide/Services/Pipeline/pipeline-edit-guide/concurrency-control/job-concurrency.md)
            * [禁用流水线](UserGuide/Services/Pipeline/pipeline-edit-guide/disable-pipeline.md)
        * [流水线任务详情页]()
            * [详情](UserGuide/Services/Pipeline/pipeline-build-detail/pipeline-detail.md)
            * [流水线状态信息汇总](UserGuide/Services/Pipeline/pipeline-build-detail/status.md)
        * [流水线组]()
            * [流水线组](UserGuide/Services/Pipeline/pipeline-group/group.md)
    * [Pipeline as Code - 开发中]()
        * [快速上手]()
            * [快速上手 PAC 模式](UserGuide/Services/Pipeline-as-Code/01-quick-start/01-quict-start.md)
            * [使用 UI 辅助编排 YAML 文件](UserGuide/Services/Pipeline-as-Code/01-quick-start/02-use-ui-to-generate.md)
            * [流水线版本管理](UserGuide/Services/Pipeline-as-Code/01-quick-start/03-version-control.md)
            * [触发时 YAML 配置取值规则](UserGuide/Services/Pipeline-as-Code/01-quick-start/04-yml-spec.md)
            * [删除流水线](UserGuide/Services/Pipeline-as-Code/01-quick-start/05-delete-pipeline.md)
            * [语法检测/补全工具](UserGuide/Services/Pipeline-as-Code/01-quick-start/06-yml-schema-vscode.md)
        * [编排流水线]()
            * [添加触发器]()
                * [监听 YAML 所在库的事件](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/01-triggers/01-add-trigger.md)
                * [监听非 YAML 所在库的事件](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/01-triggers/02-cros-git.md)
                * [监听 SVN 代码库事件](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/01-triggers/03-svn.md)
                * [监听外网版工蜂代码库事件](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/01-triggers/05-tgit.md)
                * [监听 P4 代码库事件](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/01-triggers/04-p4.md)
            * [添加 Stage]()
                * [添加阶段 stages](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/02-stages/01-add-stage.md)
                * [添加收尾阶段 finally](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/02-stages/02-add-final-stage.md)
                * [stage 下支持的属性](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/02-stages/03-stage-attributes.md)
                * [stage 准入](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/02-stages/04-stage-check-in.md)
            * [添加 Job]()
                * [添加作业 Job](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/03-jobs/01-add-job.md)
                * [设置构建环境](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/03-jobs/02-set-up.md)
                * [设置互斥组](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/03-jobs/03-set-mutex.md)
                * [使用 Matrix Job](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/03-jobs/04-set-matrix.md)
                * [job 下支持的其它属性](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/03-jobs/05-job-attributes.md)
                * [设置 Job 依赖](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/03-jobs/06-job-depend-on.md)
                * [设置节点复用](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/03-jobs/07-lock-resource-with.md)
            * [添加 Step]()
                * [执行脚本 run](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/04-steps/01-run.md)
                * [拉取代码 checkout](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/04-steps/02-checkout.md)
                * [使用研发商店中的插件 uses](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/04-steps/03-store-plugins.md)
                * [step 下支持的其他属性](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/04-steps/04-step-attributes.md)
            * [定义和使用变量]()
                * [定义变量](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/05-variables/01-variables.md)
                * [设置 Job/Step 环境变量](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/05-variables/02-job.md)
                * [引用凭据](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/05-variables/03-settings.md)
                * [引用插件输出变量](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/05-variables/04-Quote.md)
            * [添加通知](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/08-notices.md)
            * [添加设置](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/07-settings.md)
            * [条件执行]()
                * [控制点](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/09-conditional-execution/01-control-point.md)
                * [条件表达式](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/09-conditional-execution/02-expression.md)
            * [并发控制]()
                * [设置流水线并发](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/10-concurrent/01-concurrent-pipeline.md)
                * [设置 Job 并发控制](UserGuide/Services/Pipeline-as-Code/02-generate-pipelines/10-concurrent/02-concurrent-job.md)
    * [环境]()
        * [私有构建资源]()
            * [将你的构建机托管至 BKCI](UserGuide/Services/Pools/host-to-bkci.md)
            * [私有构建机环境准备](UserGuide/Services/Pools/prepara-agent.md)
            * [导入 Windows 构建机](UserGuide/Services/Pools/self-hosted-agents/windows-agent.md)
            * [构建机详情页](UserGuide/Services/Pools/agent-detail.md)
        * [构建资源池]()
            * [组建私有构建资源池](UserGuide/Services/Pools/agent-pool.md)
    * [制品库]()
        * [制品的归档与拉取](UserGuide/Services/Artifactory/Artifactory.md)
        * [归档制品](UserGuide/Services/Artifactory/archive.md)
        * [下载制品](UserGuide/Services/Artifactory/download.md)
        * [元数据规范](UserGuide/Services/Artifactory/meta.md)
    * [代码库]()
        * [代码库管理](UserGuide/Services/Coderepo/repos-link.md)
    * [质量红线]()
        * [质量红线](UserGuide/Services/Quailty-gate/quailty-gate.md)
        * [快速入门](UserGuide/Services/Quailty-gate/quick-start.md)
    * [代码检查]()
        * [CodeCC 简介](UserGuide/Services/Codecc/codecc-intro.md)
        * [代码检查配置](UserGuide/Services/Codecc/codecc-config.md)
        * [代码检查结果](UserGuide/Services/Codecc/codecc-result.md)
        * [代码检查规则集](UserGuide/Services/Codecc/codecc-ruleset.md)
        * [代码检查使用](UserGuide/Services/Codecc/codecc-usage.md)
        * [CodeCC 部署所需资源](UserGuide/Services/Codecc/codecc-cost.md)
    * [凭证管理]()
        * [凭证](UserGuide/Services/Ticket/ticket.md)
        * [创建凭据](UserGuide/Services/Ticket/ticket-add.md)
        * [查看凭据](UserGuide/Services/Ticket/ticket-list.md)
    * [研发商店]()
        * [浏览研发商店](UserGuide/Services/Store/home.md)
        * [流水线插件]()
            * [开发一个流水线插件](UserGuide/Services/Store/start-new-task.md)
            * [发布自定义插件到商店](UserGuide/Services/Store/upload-new-task.md)      
            * [发布社区插件到本地商店](UserGuide/Services/Store/plugin_install_demo.md)
        * [流水线模板]()
            * [开发一个流水线模板](UserGuide/Services/Store/ci-templates/start-new-template.md)
            * [发布流水线模板到商店](UserGuide/Services/Store/ci-templates/release-new-template.md)
        * [CI 镜像]()
            * [构建并托管一个 CI 镜像](UserGuide/Services/Store/ci-images/docker-build.md)
            * [发布 CI 镜像到商店](UserGuide/Services/Store/ci-images/release-new-image.md)
    * [编译加速]()
        * [Linux C/C++ 编译加速](UserGuide/Services/Turbo/linux-tubo-speed/use_in_linux.md)
        * [定制 Linux C/C++ 加速方案](UserGuide/Services/Turbo/linux-tubo-speed/new_plan.md)
        * [在流水线中进行编译加速](UserGuide/Services/Turbo/linux-tubo-speed/use_in_pipeline.md)
        * [在私有构建机上使用加速](UserGuide/Services/Turbo/linux-tubo-speed/use_in_local.md)
    * [权限管理]()
        * [权限简介](UserGuide/Services/Permission/permission.md)
        * [用户组](UserGuide/Services/Permission/user-group.md)
        * [如何自定义项目级别的用户组](UserGuide/Services/Permission/custom-group.md)
        * [通过流水线组管理一批流水线的权限](UserGuide/Services/Permission/pipeline-group.md)
        * [如何添加用户到项目级别的用户组](UserGuide/Services/Permission/add-user-to-project-group.md)
        * [如何添加用户到资源级别的用户组](UserGuide/Services/Permission/add-user-to-item-group.md)
        * [如何给项目级别的用户组添加权限](UserGuide/Services/Permission/groups-user-add.md)
        * [如何给一组用户开通指定流水线的权限](UserGuide/Services/Permission/pipeline-permission.md)
        * [项目成员管理（批量续期/移交/移出)](UserGuide/Services/Permission/project-member.md)
        * [审批权限申请单](UserGuide/Services/Permission/approval.md)
        * [授权管理](UserGuide/Services/Permission/authorize.md)
        * [如何申请权限](UserGuide/Services/Permission/apply.md)
        * [如何续期权限](UserGuide/Services/Permission/renewal.md)
        * [如何交接权限](UserGuide/Services/Permission/transfer.md)
        * [如何退出权限](UserGuide/Services/Permission/exit.md)
    * [移动端版本体验]()
        * [移动端版本体验简介](UserGuide/Services/Client-experience/intro.md)
        * [部署移动端版本体验需要的硬件资源](UserGuide/Services/Client-experience/client-experience-cost.md)
        * [移动端版本体验使用指南](UserGuide/Services/Client-experience/client-experience-usage.md)
    * [bkchat 机器人]()
        * [简介](UserGuide/Services/Bkchat/intro.md)
        * [bkchat 使用说明](UserGuide/Services/Bkchat/bkchatbot-usage.md)  
* [场景案例]()
    * [代码拉取+制品上传+制品下载](UserGuide/Quickstarts/Case/Examples/pull-upload-download.md)
    * [流水线触发方式使用](UserGuide/Quickstarts/Case/Examples/different-triggers.md)
    * [流水线变量使用](UserGuide/Quickstarts/Case/Examples/vars-usage.md)
    * [使用模板创建流水线](UserGuide/Quickstarts/Case/Examples/create-pipeline-by-template.md)
    * [流水线条件判断](UserGuide/Quickstarts/Case/Examples/condition-stage.md)
    * [子流水线](UserGuide/Quickstarts/Case/Examples/children-pipeline.md)
    * [Java Maven Demo](UserGuide/Quickstarts/Case/Examples/Java-Maven.md)
    * [Node Demo](UserGuide/Quickstarts/Case/Examples/Node.md)
* [场景实践]()
    * [示例]()
        * [美术人员自助更新游戏资源](UserGuide/Quickstarts/Case/Scene/Arts-upload-resources.md)
        * [运营人员发布游戏内运营活动](UserGuide/Quickstarts/Case/Scene/operators-upload-resources.md)
        * [客户端多版本构建保持一致](UserGuide/Quickstarts/Case/Scene/client-multi-Consistent.md)
        * [c/c++ 后台代码的编译加速](UserGuide/Quickstarts/Case/Scene/code-compilation-acceleration.md)
        * [客户端自动化性能测试](UserGuide/Quickstarts/Case/Scene/Client-performance-testing.md)
        * [Pipeline 失败的问题定位](UserGuide/Quickstarts/Case/Scene/pipeline-failure-location.md)
        * [移动端内测版本发布管理](UserGuide/Quickstarts/Case/Scene/version-release-management.md)
        * [在转测/发布时使用质量红线](UserGuide/Quickstarts/Case/Scene/release-quality-redline.md)
        * [MergeRequest 时使用质量红线](UserGuide/Quickstarts/Case/Scene/mr-quality-redline.md)
        * [企业微信机器人执行流水线](UserGuide/Quickstarts/Case/Scene/wechat-robot-exe.md)
        * [流水线的模版和复制](UserGuide/Quickstarts/Case/Scene/Template-copy-pipeline.md)
        * [管理大量流水线](UserGuide/Quickstarts/Case/Scene/Manage-large-pipelines.md)
        * [UE 引擎编译加速](UserGuide/Quickstarts/Case/Scene/UE4-compilation-acceleration.md)
        * [实现发布与回滚](UserGuide/Quickstarts/Case/Scene/Implement-publishing-rollback.md)
        * [集成 P4 代码库](UserGuide/Quickstarts/Case/Scene/p4-code-base.md)
        * [云环境异常定位](UserGuide/Quickstarts/Case/Scene/Cloud-anomaly-location.md)
        * [流水线互斥及排队](UserGuide/Quickstarts/Case/Scene/Pipeline-exclusion-queue.md)
        * [组建私有构建集群](UserGuide/Quickstarts/Case/Scene/Build-private-clusters.md)
        * [不同流水线间调用](UserGuide/Quickstarts/Case/Scene/call-pipeline-diff.md)
        * [通知发送到钉钉](UserGuide/Quickstarts/Case/Scene/notification-sent-nail.md)
    * [客户案例]()
        * [呦尔哈--通过 BKCI 提升 CI/CD 效率](UserGuide/Quickstarts/Case/Case-study/yorha.md)
        * [永航--通过蓝鲸 BKCI 实现跨环境 CI/CD 互通](UserGuide/Quickstarts/Case/Case-study/yonghang.md)
        * [宝可拉--通过按量计费的编译加速方案提升服务器端 75% 编译速度](UserGuide/Quickstarts/Case/Case-study/bokura.md)    
* [部署指南]()
    * [BKCI 硬件规格指南](UserGuide/Setup/system-requirements/hardware.md)
    * [BKCI 系统要求](UserGuide/Setup/system-requirements/system.md)
    * [BKCI 备份方案](UserGuide/Setup/backup.md)
* [开发者资源]()
    * [流水线插件]()
        * [插件开发规范]()
            * [插件开发规范](UserGuide/Developer/plugins/plugin-dev-standard/plugin-specification.md)
            * [插件配置规范](UserGuide/Developer/plugins/plugin-dev-standard/plugin-config.md)
            * [插件输出规范](UserGuide/Developer/plugins/plugin-dev-standard/plugin-output.md)
            * [插件错误码规范](UserGuide/Developer/plugins/plugin-dev-standard/plugin-error-code.md)
            * [插件发布包规范](UserGuide/Developer/plugins/plugin-dev-standard/release.md)
            * [自定义插件 UI 指引](UserGuide/Developer/plugins/plugin-dev-standard/plugin-custom-ui.md)
        * [插件开发指引]()
            * [Java 插件开发指引](UserGuide/Developer/plugins/plugin-dev-guide/java.md)
            * [Python 插件开发指引](UserGuide/Developer/plugins/plugin-dev-guide/python.md)
            * [Golang 插件开发指引](UserGuide/Developer/plugins/plugin-dev-guide/golang.md)
            * [NodeJS 插件开发指引](UserGuide/Developer/plugins/plugin-dev-guide/nodejs.md)
        * [插件开发 SDK]()
            * [python SDK](UserGuide/Developer/plugins/plugin-sdk/python-atom-sdk.md)
        * [插件运行环境]()
            * [NodeJS 插件执行环境](UserGuide/Developer/plugins/plugin-dev-env/prepare-node.md)
            * [Python 插件执行环境](UserGuide/Developer/plugins/plugin-dev-env/prepare-python.md)
        * [插件国际化指引]()
            * [Java 插件国际化](UserGuide/Developer/plugins/plugin-dev-i18n/plugin-i18n-java.md)
            * [Python 插件国际化](UserGuide/Developer/plugins/plugin-dev-i18n/plugin-i18n-python.md)
            * [Go 插件国际化](UserGuide/Developer/plugins/plugin-dev-i18n/plugin-i18n-go.md)
            * [NodeJS 插件国际化](UserGuide/Developer/plugins/plugin-dev-i18n/plugin-i18n-js.md)
            * [插件自定义 UI 前端国际化](UserGuide/Developer/plugins/plugin-dev-i18n/plugin-i18n-custom-ui.md)
        * [插件开发案例]()
            * [sendmsg-通用消息发送插件](UserGuide/Developer/plugins/plugin-dev-guide/case-stduy/sendmsg.md)
    * [REST API]()
        * [使用前必读](UserGuide/Developer/rest-api/read-before-use.md)
        * [API 使用示例](UserGuide/Developer/rest-api/api-use-demo.md)
        * [OPENAPI-项目模板资源]()
            * [批量更新流水线模板实例](UserGuide/Developer/rest-api/project-template-resources/batch-update-pipeline-template-example.md)
            * [更新流水线模板](UserGuide/Developer/rest-api/project-template-resources/update-the-pipeline-template.md)
            * [批量实例化流水线模板](UserGuide/Developer/rest-api/project-template-resources/batch-instantiation-pipeline-template.md)
            * [创建流水线模板](UserGuide/Developer/rest-api/project-template-resources/create-a-pipeline-template.md)
            * [获取所有种类流水线模板列表](UserGuide/Developer/rest-api/project-template-resources/get-a-list-of-all-kinds-of-pipeline-templates.md)
            * [获取流水线模板的实例列表](UserGuide/Developer/rest-api/project-template-resources/get-the-list-of-instances-of-the-pipeline-template.md)
            * [获取流水线模板详情](UserGuide/Developer/rest-api/project-template-resources/get-the-details-of-the-pipeline-template.md)
            * [模版管理-获取模版列表](UserGuide/Developer/rest-api/project-template-resources/get-a-list-of-templates.md)
            * [删除流水线模板的版本](UserGuide/Developer/rest-api/project-template-resources/delete-the-version-of-the-pipeline-template.md)
            * [删除流水线模板](UserGuide/Developer/rest-api/project-template-resources/delete-the-pipeline-template.md)
        * [OPENAPI-构建资源]()
            * [获取签名接口 token](UserGuide/Developer/rest-api/build-resources/get-the-signature-interface-token.md)
            * [查看签名任务状态信息](UserGuide/Developer/rest-api/build-resources/view-signature-task-status-information.md)
            * [获取签后 IPA 文件下载路径](UserGuide/Developer/rest-api/build-resources/get-the-download-path-of-the-signed-ipa-file.md)
            * [签名任务详情](UserGuide/Developer/rest-api/build-resources/signature-task-details.md)
        * [OPENAPI-代码提交资源]()
            * [获取代码提交记录](UserGuide/Developer/rest-api/code-submission-resources/get-the-code-submission-record.md)
        * [OPENAPI-代码仓库资源]()
            * [编辑关联代码库](UserGuide/Developer/rest-api/code-warehouse-resources/edit-the-associated-code-base.md)
            * [关联代码库](UserGuide/Developer/rest-api/code-warehouse-resources/associated-code-base.md)
            * [代码库列表](UserGuide/Developer/rest-api/code-warehouse-resources/code-library-list.md)
            * [删除代码库](UserGuide/Developer/rest-api/code-warehouse-resources/delete-code-base.md)
        * [OPENAPI-项目资源]()
            * [修改项目](UserGuide/Developer/rest-api/project-resources/modify-the-project.md)
            * [添加指定用户到指定项目用户组](UserGuide/Developer/rest-api/project-resources/add-the-specified-user-to-the-specified-project-user-group.md)
            * [创建项目](UserGuide/Developer/rest-api/project-resources/create-project.md)
            * [校验项目名称和项目英文名](UserGuide/Developer/rest-api/project-resources/verify-the-project-name-and-the-english-name-of-the-project.md)
            * [获取项目信息](UserGuide/Developer/rest-api/project-resources/get-project-information.md)
            * [查询所有项目](UserGuide/Developer/rest-api/project-resources/query-all-items.md)
        * [OPENAPI-流水线资源]()
            * [更新流水线设置](UserGuide/Developer/rest-api/pipeline-resources/update-pipeline-settings.md)
            * [还原流水线编排](UserGuide/Developer/rest-api/pipeline-resources/reduction-pipeline-orchestration.md)
            * [更新流水线编排和设置](UserGuide/Developer/rest-api/pipeline-resources/update-pipeline-layout-and-settings.md)
            * [编辑流水线编排](UserGuide/Developer/rest-api/pipeline-resources/edit-pipeline-layout.md)
            * [导入新流水线, 包含流水线编排和设置](UserGuide/Developer/rest-api/pipeline-resources/import-new-pipeline.md)
            * [批量获取流水线编排与配置](UserGuide/Developer/rest-api/pipeline-resources/batch-get-pipeline-layout-and-configuration.md)
            * [流水线重命名](UserGuide/Developer/rest-api/pipeline-resources/pipeline-renaming.md)
            * [复制流水线编排](UserGuide/Developer/rest-api/pipeline-resources/copy-pipeline-orchestration.md)
            * [新建流水线编排](UserGuide/Developer/rest-api/pipeline-resources/new-pipeline-orchestration.md)
            * [获取流水线状态](UserGuide/Developer/rest-api/pipeline-resources/get-the-status-of-the-pipeline.md)
            * [获取流水线编排](UserGuide/Developer/rest-api/pipeline-resources/get-the-pipeline-orchestration.md)
            * [获取项目的流水线列表](UserGuide/Developer/rest-api/pipeline-resources/get-the-pipeline-list-of-the-project.md)
            * [删除流水线编排](UserGuide/Developer/rest-api/pipeline-resources/delete-the-pipeline-orchestration.md)
        * [OPENAPI-流水线分组]()
            * [更改标签](UserGuide/Developer/rest-api/pipeline-grouping/change-label.md)
            * [更改分组](UserGuide/Developer/rest-api/pipeline-grouping/change-group.md)
            * [添加标签](UserGuide/Developer/rest-api/pipeline-grouping/add-tag.md)
            * [添加分组](UserGuide/Developer/rest-api/pipeline-grouping/add-group.md)
            * [获取所有分组信息](UserGuide/Developer/rest-api/pipeline-grouping/get-all-group-information.md)
            * [删除标签](UserGuide/Developer/rest-api/pipeline-grouping/remove-label.md)
            * [删除分组](UserGuide/Developer/rest-api/pipeline-grouping/delete-group.md)
        * [OPENAPI-迁移]()
            * [关联 iam 项目](UserGuide/Developer/rest-api/migrate/associated-iam-project.md)
            * [获取项目下 pipelineId+自增 id](UserGuide/Developer/rest-api/migrate/get-the-pipelineid-and-auto-increment-id-under-the-project.md)
        * [OPENAPI-研发市场资源]()
            * [安装研发商店模板到项目](UserGuide/Developer/rest-api/r-and-d-market-resources/install-the-r-and-d-store-template-into-the-project.md)
        * [OPENAPI-构建日志资源]()
            * [获取更多日志](UserGuide/Developer/rest-api/build-log-resources/get-more-logs.md)
            * [根据构建 ID 获取初始化所有日志](UserGuide/Developer/rest-api/build-log-resources/obtain-and-initialize-all-logs-according-to-the-build-id.md)
            * [下载日志接口](UserGuide/Developer/rest-api/build-log-resources/download-log-interface.md)
            * [获取某行后的日志](UserGuide/Developer/rest-api/build-log-resources/get-the-log-after-a-certain-line.md)
        * [OPENAPI-证书资源]()
            * [编辑凭据](UserGuide/Developer/rest-api/certificate-resources/edit-credentials.md)
            * [新增凭据](UserGuide/Developer/rest-api/certificate-resources/add-credentials.md)
            * [获取凭据](UserGuide/Developer/rest-api/certificate-resources/get-credentials.md)
            * [获取用户拥有对应权限凭据列表](UserGuide/Developer/rest-api/certificate-resources/obtain-the-list-of-credentials-that-the-user-has-corresponding-permissions.md)
            * [删除凭据](UserGuide/Developer/rest-api/certificate-resources/delete-credentials.md)
        * [OPENAPI-callback 资源]()
            * [callback 回调重试](UserGuide/Developer/rest-api/callback-resource/callback-callback-to-retry.md)
            * [批量创建 callback 回调](UserGuide/Developer/rest-api/callback-resource/create-callbacks-in-batches.md)
            * [创建 callback 回调](UserGuide/Developer/rest-api/callback-resource/create-callback-callback.md)
            * [callback 回调执行历史记录](UserGuide/Developer/rest-api/callback-resource/callback-execution-history.md)
            * [callback 回调列表](UserGuide/Developer/rest-api/callback-resource/callback-list.md)
            * [callback 回调移除](UserGuide/Developer/rest-api/callback-resource/callback-callback-removed.md)
        * [OPENAPI-构建资源]()
            * [启动构建](UserGuide/Developer/rest-api/build-resources-1/start-the-build.md)
            * [获取构建中的变量值](UserGuide/Developer/rest-api/build-resources-1/get-the-value-of-the-variable-in-the-build.md)
            * [停止构建](UserGuide/Developer/rest-api/build-resources-1/stop-building.md)
            * [手动审核启动阶段](UserGuide/Developer/rest-api/build-resources-1/manual-review-of-the-start-up-phase.md)
            * [重试构建-重试或者跳过失败插件](UserGuide/Developer/rest-api/build-resources-1/retry-the-build.md)
            * [操作暂停插件](UserGuide/Developer/rest-api/build-resources-1/operation-pause-plugin.md)
            * [获取流水线手动启动参数](UserGuide/Developer/rest-api/build-resources-1/obtain-the-manual-start-parameters-of-the-pipeline.md)
            * [获取流水线构建历史](UserGuide/Developer/rest-api/build-resources-1/get-pipeline-construction-history.md)
            * [查看构建状态信息](UserGuide/Developer/rest-api/build-resources-1/view-build-status-information.md)
            * [构建详情](UserGuide/Developer/rest-api/build-resources-1/build-details.md)
        * [OPENAPI-插件资源]()
            * [安装插件到项目](UserGuide/Developer/rest-api/plugin-resources/install-the-plugin-to-the-project.md)
            * [根据插件代码获取插件统计信息](UserGuide/Developer/rest-api/plugin-resources/get-plug-in-statistics-according-to-the-plug-in-code.md)
            * [根据插件代码获取使用的流水线详情](UserGuide/Developer/rest-api/plugin-resources/get-the-details-of-the-pipeline-used-according-to-the-plug-in-code.md)
            * [根据插件代码获取插件详细信息](UserGuide/Developer/rest-api/plugin-resources/get-plug-in-details-according-to-the-plug-in-code.md)
        * [OPENAPI-构建产物资源]()
            * [获取用户下载链接](UserGuide/Developer/rest-api/build-product-resources/get-user-download-link.md)
            * [根据元数据获取文件](UserGuide/Developer/rest-api/build-product-resources/get-files-based-on-metadata.md)
        * [OPENAPI-构建产物托管任务资源]()
            * [清理文件托管任务](UserGuide/Developer/rest-api/build-product-hosting-task-resources/clean-up-file-hosting-tasks.md)
            * [创建文件托管任务](UserGuide/Developer/rest-api/build-product-hosting-task-resources/create-file-hosting-task.md)
            * [查询文件托管任务状态](UserGuide/Developer/rest-api/build-product-hosting-task-resources/query-file-hosting-task-status.md)
        * [OPENAPI-环境管理-构建机管理]()
            * [根据 hashId 获取项目节点列表(不校验权限)](UserGuide/Developer/rest-api/build-machine-management/get-the-list-of-project-nodes-according-to-hashid.md)
            * [根据环境的 hashId 获取指定项目指定环境下节点列表(不校验权限)](UserGuide/Developer/rest-api/build-machine-management/get-the-list-of-nodes-in-the-specified-environment-of-the-specified-project-according-to-the-hashid.md)
            * [根据环境名称获取环境信息(不校验权限)](UserGuide/Developer/rest-api/build-machine-management/obtain-environmental-information-based-on-the-environmental-name.md)
            * [根据 hashId (多个)获取环境信息(不校验权限)](UserGuide/Developer/rest-api/build-machine-management/obtain-environmental-information-based-on-hashid-multiple.md)
            * [获取指定构建机状态](UserGuide/Developer/rest-api/build-machine-management/get-the-status-of-the-specified-build-machine.md)
            * [获取项目下私有构建机列表](UserGuide/Developer/rest-api/build-machine-management/get-the-list-of-third-party-build-machines-under-the-project.md)
            * [获取用户有权限使用的服务器列表](UserGuide/Developer/rest-api/build-machine-management/get-the-list-of-servers-that-the-user-has-permission-to-use.md)
            * [获取构建节点信息（扩展接口）](UserGuide/Developer/rest-api/build-machine-management/get-build-node-information.md)
            * [获取构建节点信息（扩展接口）](UserGuide/Developer/rest-api/build-machine-management/get-build-node-information-extension-ports.md)
            * [获取用户有权限使用的环境列表](UserGuide/Developer/rest-api/build-machine-management/get-the-list-of-environments-that-the-user-has-permission-to-use.md)
        * [QUALITY-质量红线相关]()
            * [更新拦截规则列表](UserGuide/Developer/rest-api/quality-red-line-related/update-the-list-of-blocking-rules.md)
            * [创建拦截规则](UserGuide/Developer/rest-api/quality-red-line-related/create-blocking-rules.md)
            * [获取拦截规则列表](UserGuide/Developer/rest-api/quality-red-line-related/get-the-list-of-blocking-rules.md)
            * [获取拦截记录](UserGuide/Developer/rest-api/quality-red-line-related/obtain-interception-records.md)
            * [删除拦截规则列表](UserGuide/Developer/rest-api/quality-red-line-related/delete-the-list-of-blocking-rules.md)
        * [WEBHOOK-代码事件触发]()
            * [获取流水线的 webhook 构建日志列表](UserGuide/Developer/rest-api/code-event-trigger/get-the-pipelines-webhook-build-log-list.md)
            * [获取流水线的 webhook 列表](UserGuide/Developer/rest-api/code-event-trigger/get-the-webhook-list-of-the-pipeline.md)
    * [数据库设计文档]()
        * [devops_ci_auth](UserGuide/Developer/DB-doc/devops_ci_auth.md)
        * [devops_ci_sign](UserGuide/Developer/DB-doc/devops_ci_sign.md)
        * [devops_ci_artifactory](UserGuide/Developer/DB-doc/devops_ci_artifactory.md)
        * [devops_ci_repository](UserGuide/Developer/DB-doc/devops_ci_repository.md)
        * [devops_ci_plugin](UserGuide/Developer/DB-doc/devops_ci_plugin.md)
        * [devops_ci_project](UserGuide/Developer/DB-doc/devops_ci_project.md)
        * [devops_ci_quality](UserGuide/Developer/DB-doc/devops_ci_quality.md)
        * [devops_ci_store](UserGuide/Developer/DB-doc/devops_ci_store.md)
        * [devops_ci_log](UserGuide/Developer/DB-doc/devops_ci_log.md)
        * [devops_ci_dispatch](UserGuide/Developer/DB-doc/devops_ci_dispatch.md)
        * [devops_ci_image](UserGuide/Developer/DB-doc/devops_ci_image.md)
        * [devops_ci_environment](UserGuide/Developer/DB-doc/devops_ci_environment.md)
        * [devops_ci_op](UserGuide/Developer/DB-doc/devops_ci_op.md)
        * [devops_ci_notify](UserGuide/Developer/DB-doc/devops_ci_notify.md)
        * [devops_ci_openapi](UserGuide/Developer/DB-doc/devops_ci_openapi.md)
        * [devops_ci_ticket](UserGuide/Developer/DB-doc/devops_ci_ticket.md)
        * [devops_ci_process](UserGuide/Developer/DB-doc/devops_ci_process.md)
* [常见问题]()
    * [常见问题集锦](UserGuide/Reference/faqs/README.md)
    * [基本概念](UserGuide/Reference/faqs/user-guide.md)
    * [自检思路](UserGuide/Reference/faqs/check-myself.md)
    * [流水线]()
        * [流水线执行时相关问题](UserGuide/Reference/faqs/pipelines/execute.md)
        * [使用常见问题]()
            * [流水线编排](UserGuide/Reference/faqs/pipelines/use/set_up.md)
            * [触发器](UserGuide/Reference/faqs/pipelines/use/trigger.md)
            * [构建机](UserGuide/Reference/faqs/pipelines/use/node.md)
            * [插件](UserGuide/Reference/faqs/pipelines/use/plugin.md)
        * [报错常见问题]()
            * [触发器](UserGuide/Reference/faqs/pipelines/error/trigger.md)
            * [构建机](UserGuide/Reference/faqs/pipelines/error/node.md)
            * [插件报错](UserGuide/Reference/faqs/pipelines/error/plugin.md)
    * [代码库](UserGuide/Reference/faqs/code_repo.md)
    * [页面报错](UserGuide/Reference/faqs/web_error.md)
    * [服务异常](UserGuide/Reference/faqs/services_error.md)
    * [机器重启](UserGuide/Reference/faqs/restart.md)
    * [环境管理]()
        * [使用常见问题](UserGuide/Reference/faqs/environment/use.md)
        * [报错常见问题](UserGuide/Reference/faqs/environment/error.md)
    * [代码检查](UserGuide/Reference/faqs/codecc-faqs.md)
    * [制品库](UserGuide/Reference/faqs/repo-faqs.md)
    * [编译加速](UserGuide/Reference/faqs/turbo-faqs.md)
    * [已知问题](UserGuide/Reference/faqs/known-issues.md)
    * [系统限制]()
        * [流水线复杂度限制](UserGuide/Reference/limit/pipeline-limit.md)
* [蓝鲸相关材料]()  
    * [蓝鲸使用学习材料](UserGuide/Reference/bk-info/bk-tutorial.md)
    * [蓝鲸入门使用文档](UserGuide/Reference/bk-info/bk-user-guide.md)
